<resources>
    <string name="app_name">U park</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="let_s_you_in">Let\'s you in</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="sign_in_with_password">Sign in with password</string>
    <string name="or">or</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="create_your">Create Your</string>
    <string name="account">Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="or_continue_with">or continue with</string>
    <string name="sign_up_with_google">sign up with google</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="sign_in">Sign in</string>
    <string name="login_to_your">Login to your</string>
    <string name="forgot_the_password">Forgot the password?</string>
    <string name="saved">Saved</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="details">Details</string>
    <string name="rubangura_basement_park">Rubangura basement park</string>
    <string name="kv_123_v_kigali">kv 123 v, kigali</string>
    <string name="close">Close</string>
    <string name="image">Image</string>
    <string name="parking_details">Parking Details</string>
    <string name="_2_km">2 Km</string>
    <string name="_8_am_10pm">8 AM - 10PM</string>
    <string name="description">Description</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining</string>
    <string name="_2_02">$2.02</string>
    <string name="per_hour">per hour</string>
    <string name="_kg">_kg</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="result">Result</string>
    <string name="filter">Filter</string>
    <string name="distance">Distance</string>
    <string name="slots_available">Slots Available</string>
    <string name="reset">Reset</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="lower_price">Lower Price</string>
    <string name="sort_by">Sort by</string>
    <string name="todo">TODO</string>
    <string name="near_parking_are_around_you">near parking are around you</string>
    <string name="_hour">/hour</string>
    <string name="_500">500</string>
    <string name="available_slots">Available slots</string>
    <string name="space_available">Space available</string>
    <string name="makuza_has_a_space_to_park">Makuza has a space to park</string>
    <string name="space_full">Space full</string>
    <string name="spaces">Spaces</string>
    <string name="total_slots">Total slots</string>
    <string name="_km">_km</string>
    <string name="full_name">Full name</string>
    <string name="username">Username</string>
    <string name="_250_7">+250 7..</string>
    <string name="company_name">Company name</string>
    <string name="login">Login</string>
    <string name="go">Go</string>
</resources>