<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp"

    >
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/main_color_rounded"
            android:src="@drawable/ic_baseline_local_parking_24"
            android:contentDescription="@string/todo" />


    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/garage_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rubangura_basement_park"
            android:fontFamily="@font/montserrat_regular"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/garage_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:layout_marginRight="4dp"
            android:text="@string/near_parking_are_around_you"/>


    </LinearLayout>
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/garage_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:layout_marginBottom="5dp"
                android:textColor="@color/black"
                android:layout_marginRight="4dp"
                android:text="@string/_2_km"/>
            <TextView
                android:id="@+id/availableSlots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/montserrat_regular"
                android:layout_marginBottom="5dp"
                android:textColor="@color/black"
                android:text="@string/_500"
                app:drawableLeftCompat="@drawable/ic_baseline_local_parking_16" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/garage_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:layout_marginRight="4dp"
                android:textColor="@color/main"
                android:text="@string/_2_02"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:layout_marginRight="4dp"
                android:textColor="@color/black"
                android:text="@string/_hour"/>


        </LinearLayout>
    </LinearLayout>


</LinearLayout>