<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp"
    android:background="@drawable/rounded_bottom_fill_main">
    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:padding="5dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_gray_light_x_sm"
        android:src="@drawable/ic_baseline_location_on_24"
        android:contentDescription="@string/todo" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginLeft="12dp"
        >
        <TextView
            android:id="@+id/garage_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rubangura_basement_park"
            android:fontFamily="@font/montserrat_bold"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="5dp"
            android:textSize="15sp"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_500"
            android:fontFamily="@font/montserrat_regular"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            />
    </LinearLayout>
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
    <ImageButton
        android:id="@+id/close_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="5dp"
        android:layout_marginLeft="5dp"
        android:background="@drawable/main_color_rounded"
        android:src="@drawable/ic_baseline_close_24"
        android:contentDescription="@string/todo" />


</LinearLayout>